[STYLE] wider tables, more text contrast, fix green buttons

--- a/css/main.css
+++ b/css/main.css
@@ -152,7 +152,7 @@
   -moz-box-sizing: border-box;
 }
 body {
-  color: #898788;
+  color: #393738;
   font-family: 'Open Sans', sans-serif;
 }
 body .content-root {
